--- a/Robot Number II/Assembly-CSharp-vs.csproj
+++ b/Robot Number II/Assembly-CSharp-vs.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Defense\CharacterDefense.cs" />
      <Compile Include="Assets\Scripts\Defense\IDefense.cs" />
      <Compile Include="Assets\Scripts\Defense\IDefenseBehavior.cs" />
+     <Compile Include="Assets\Scripts\Defense\ShieldExpansion.cs" />
      <Compile Include="Assets\Scripts\EnemyController.cs" />
      <Compile Include="Assets\Scripts\GroundCheck.cs" />
      <Compile Include="Assets\Scripts\Interface\Interfaces.cs" />
@@ -68,7 +69,7 @@
      <Compile Include="Assets\Scripts\TestMenu.cs" />
      <Compile Include="Assets\Scripts\WeaponBehavior.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>d:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
